2017-11-03 18:06  0.2-beta1
  * Added tickit_window_{is,set}_steal_focus(3)
  * Added entire toplevel Tickit instance
  * New bind_events API style - one event + flags, instead of bitmask
  * Renamed:
     + tickit_string_seqlen   => tickit_utf8_seqlen
     + tickit_string_putchar  => tickit_utf8_put
     + tickit_string_mbswidth => tickit_utf8_mbswidth
     + tickit_string_byte2col => tickit_utf8_byte2col
     + tickit_string_col2byte => tickit_utf8_col2byte
     + tickit_string_count*   => tickit_utf8_count*