@@ -82,4 +82,5 @@ Any event handlers for this event will be invoked in reverse order; the newest i
 .BR tickit_rect (7),
 .BR tickit_rectset (7),
 .BR tickit_renderbuffer (7),
+.BR tickit_string (7),
 .BR tickit_utf8_count (3)
