@@ -1,0 +1,42 @@
+#include "tickit.h"
+
+#include <string.h>
+
+struct TickitString {
+  int refcount;
+  char str[0];
+};
+
+TickitString *tickit_string_new(const char *str, size_t len)
+{
+  TickitString *s = malloc(sizeof(TickitString) + len + 1);
+
+  s->refcount = 1;
+  memcpy(s->str, str, len);
+  s->str[len] = '\0';
+
+  return s;
+}
+
+TickitString *tickit_string_ref(TickitString *s)
+{
+  s->refcount++;
+  return s;
+}
+
+void tickit_string_unref(TickitString *s)
+{
+  if(s->refcount > 1) {
+    s->refcount--;
+    return;
+  }
+
+  s->refcount = 0;
+  s->str[0] = '\0';
+  free(s);
+}
+
+const char *tickit_string_get(TickitString *s)
+{
+  return s->str;
+}
